--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "CLA Assistant"
-        if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
-        # Alpha Release
+        if: (github.event.comment.body == 'cla check' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
         uses: cla-assistant/github-action@v2.0.1-alpha
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -20,9 +19,8 @@ jobs:
         with: 
           path-to-signatures: 'signatures/cla.json'
           path-to-document: 'https://github.com/odoo/odoo/blob/master/doc/cla/icla-1.0.md' # e.g. a CLA or a DCO document
-          # branch should not be protected
           branch: 'master'
-          allowlist: brboi,kebeclibre,*-odoo,bot*
+          allowlist: SimonGenin,brboi,kebeclibre,*-odoo,bot*
           use-dco-flag: false #'Set this to true if you want to use a dco instead of a cla'
           
          #below are the optional inputs - If the optional inputs are not given, then default values will be taken
